# teste22

./: .env.example  .gitignore  .replit  ALTERACAO_GALERIA_EQUIPE.md  COMO_USAR_MULTILINGUE.md  DEPLOY_RAILWAY.md  MODELO_3D_TRADUCOES.md  MULTILINGUAL_GUIDE.md  MULTILINGUAL_SYSTEM.md  TESTE_VERIFICACAO_CURRICULOS.md  app.py  create_admin.py  create_admin_user.py  forms.py  huggingface_3d.py  main.py  meshy_ai.py  migrate_files_to_storage.py  migrate_status_values.py  models.py  pyproject.toml  railway.json  replit.md  routes.py  storage.py  translations_acervo_catalog.py
attached_assets/: Pasted-Analisar-e-melhorar-a-estrutura-atual-do-sistema-Avalia_1770136035673.txt  Pasted-Atualize-a-p-gina-de-cria-o-de-conta-com-as-seguintes-modifica-es-e-tradu-es-multil-ngues-Portug-1762230104514_1762230104515.txt  Pasted-Atualize-o-sistema-de-autentica-o-e-gerenciamento-de-usu-rios-com-as-seguintes-regras-de-valida-o--1762526095417_1762526095419.txt  Pasted-Contexto-Estamos-desenvolvendo-o-sistema-LAARI-Laborat-_1767365206308.txt  Pasted-MODELO-DE-PLANILHA-OBRIGAT-RIO-O-sistema-deve-aceitar-a_1767366449824.txt  Pasted-Melhorar-a-experi-ncia-de-escolha-do-artefato-para-gera_1766423811814.txt  Pasted-Objetivo-Manter-a-funcionalidade-de-Reconstru-o-3D-por-_1766761183788.txt  Pasted-PROMPT-SUBSTITUI-O-DA-API-MESHY-POR-HUGGING-FACE-SCANNE_1766425814908.txt  Pasted-PROMPT-T-CNICO-COMPLETO-SCANNER-3D-COM-IA-LAARI-Objetiv_1766414369304.txt
templates/: 404.html  500.html  acervo.html  acervo_visitante.html  adicionar_profissional.html  admin.html  admin_estatisticas.html  base.html  (+23 more)
(+8 files in other folders)
