[project]
name = "laari-archaeological-system"
version = "1.0.0"
description = "L.A.A.R.I - Sistema de Gestão Arqueológica Integrado"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.43",
    "flask-babel>=4.0.0",
    "replit-object-storage>=1.0.2",
    "qrcode>=8.2",
    "pillow>=12.0.0",
]
